test/Fail/Issue2331.err
Issue2331.agda:11.1-16.28: error: [TerminationIssue]
Termination checking failed for the following functions:
  test, helper
Problematic calls:
  helper i j k (c l)
    (at Issue2331.agda:13.49-55)
  test k d
    (at Issue2331.agda:16.20-24)
